# shapes

./: .gitignore  README.md  shapes.cabal
src/: Colour.hs  Main.hs  Render.hs  Shape.hs  Shapes.hs  Style.hs  Transform.hs
web/: index.html
web/elm/: Shapes.elm  shapes.js
