name:                shapes
version:             0.1.0.0
synopsis:            pretty shapes
description:         Please see README.md
homepage:            https://github.com/githubuser/shapes#readme
license:             BSD3
license-file:        LICENSE
author:              Conor Brennan
maintainer:          brennc27@tcd.ie
copyright:           2016 Conor Brennan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable shapes
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       blaze-svg,
                       matrix,
                       scotty,
                       text
  other-modules:       Colour,
                       Render,
                       Shape,
                       Style,
                       Transform
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/shapes
